# near-demo

./: Cargo.toml  README.md
.cargo/: config.toml
amm-contract/: Cargo.toml
amm-contract/src/: lib.rs  token.rs
integration-tests/: Cargo.toml
integration-tests/src/: api.rs  main.rs
token-a/: Cargo.toml
token-a/src/: lib.rs
token-b/: Cargo.toml
token-b/src/: lib.rs
